printer/src/operation_type_printer/tests/snapshots/nitrogql_printer__operation_type_printer__tests__basic_type_printing.snap
---
source: printer/src/operation_type_printer/tests/mod.rs
expression: printed
---
import type { TypedDocumentNode } from "@graphql-typed-document-node/core";
import type * as Schema from "";

type QueryResult = Schema.__SelectionSet<Schema.Query, {
  me: Schema.__SelectionSet<Schema.User, {
    id: Schema.ID;
    name: Schema.String;
    type: Schema.UserType;
    age: Schema.Int | null;
  }>;
}>;

type QueryVariables = {};

export const Query: TypedDocumentNode<QueryResult, QueryVariables>;

export { Query as default };


